--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync Drive to Voiceflow (Python)
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 12 */3 * *'
   workflow_dispatch:
   push:
     branches: [ main ]
